--- a/user_test/user_test.Rmd
+++ b/user_test/user_test.Rmd
@@ -3,9 +3,16 @@ title: "User Test of PUMP package"
 output: html_document
 ---
 
+```{r setup, include = FALSE}
+knitr::opts_chunk$set(
+  warning = FALSE,
+  message = FALSE
+)
+```
+
 # Introduction
 
-You are designing a randomized control trial for an educational program at the state level.
+You are designing a randomized control trial for an educational program.
 First, you would like to determine the power of your current study design.
 If the power of the current setup is insufficient, you would like to know the necessary sample size to increase the power, or the smallest effect size you would detect with your current sample.
 You also want to explore how different choices of parameter values will impact your power.
@@ -13,7 +20,7 @@ You also want to explore how different choices of parameter values will impact y
 Background information:
 
 - Your trial will test $4$ different outcomes, which you think are moderately correlated.
-- Your current plan is to do a cluster design, which means that entire districts will be assigned to either treatment or control.
+- Your current plan is to do a cluster design, which means that entire districts will be assigned to either treatment or control (randomization occurs at level 3).
 - 50\% of the units will receive the treatment.
 - You plan to use a Holm adjustment to adjust for the multiple outcomes.
 
@@ -25,20 +32,34 @@ Currently, you have:
 
 You also have a few other pieces of information:
 
-- You have 4 covariates describing the students, and 2 covariates describing the schools, but no covariates at the district level. You think that the student-level covariates are quite predictive, but your school-level covariates are not very predictive.
+- You have 4 covariates describing the students, and 2 covariates describing the schools, but no covariates at the district level. You think that the student-level covariates are quite predictive of the outcomes, but your school-level covariates are not very predictive of the outcomes.
 - You expect most of the variation to occur at the district level, and not very much variation to occur at the school level. In other words, schools within the same district should have similar outcomes, but outcomes may vary moderately between districts.
 - You would like to detect a treatment effect of $0.25$ effect size units on all outcomes.
 
+## Instructions
+
+*Documentation*
+
+- To understand the package, please use the attached vignette.
+- If you would like more detail, see the attached paper or the supplementary materials.
+
+*Feedback*
+
+- Please send back a completed version of this markdown, with code you wrote to answer the questions.
+- At which points were you confused?
+- Is there anything missing from the documentation?
+- Was the vignette sufficient for documentation, or did you need to refer to the paper or supplementary materials?
 
 # Using PUMP
 
 0. First, install the package.  
 
-Download the tar file, then use devtools to install.
+Install the devtools package.
+Download the tar file to your Desktop, then use devtools to install.
 
-```{r}
-install.packages('devtools')
-devtools::install_local(path = '~/Desktop/PUMP_0.1.0.tgz')
+```{r, warning=FALSE, message=FALSE, results=FALSE}
+library(devtools)
+devtools::install_local(path = '~/Desktop/PUMP_0.1.0.tar.gz')
 library(PUMP)
 ```
 
@@ -56,25 +77,34 @@ library(PUMP)
 
 ```
 
-4. Going back to the original design, determine the minimum detectable effect size of the study at your current target power for $1$-minimal power.
+**For the remaining questions, return back to the cluster design, where randomization is at level 3.**
+
+4. You want to update your assumption concerning the predictive power of your covariates. What happens to complete power if the covariates are highly predictive of the first two outcomes, but not very predictive of the second two outcomes?
+
+5. Determine the minimum detectable effect size of the study at your current target power for $1$-minimal power.
 
 ```{r}
 
 ```
-5.  Determine the number of school districts you would need with your original MDES to achieve 80\% individual power.
+6.  Determine the number of school districts you would need with your original MDES to achieve 80\% individual power.
 
 ```{r}
 
 ```
 
-6. Returning to all the original parameters, see how your power would change if you increase the correlation between outcomes, but keep everything else fixed.
-
+7. Returning to all the original parameters, see how your power would change if you increase the correlation between outcomes, but keep everything else fixed.
 
 ```{r}
 
 ```
 
-7. Check how your power would vary over a range of values for the intraclass correlation at level 3.
+8. Check how your power would vary over a range of values for the intraclass correlation at level 3.
+
+```{r}
+
+```
+
+9. Visualize this change in power due to ICC.
 
 ```{r}
 
